Fix className casings and font size on mobile

--- a/app/results/styles.module.css
+++ b/app/results/styles.module.css
@@ -7,12 +7,12 @@
   overflow: hidden;
 }
 
-.Table {
+.table {
   width: 100%;
   border-collapse: collapse;
 }
 
-.RowImage {
+.rowImage {
   border-radius: 16px;
   height: "auto";
   width: 64px;
@@ -23,16 +23,22 @@
   border-bottom: 2px solid white;
 }
 
-.RowName {
+.rowName {
   border-bottom: 2px solid white;
   text-transform: capitalize;
-  font-size: 1.5rem;
+  font-size: 1.125em;
   padding-left: 1rem;
 }
 
-.RowRank {
+.rowRank {
   padding-right: 1rem;
   border-bottom: 2px solid white;
   font-size: 1.5rem;
   text-align: right;
+}
+
+@media screen and (min-width: 700px) {
+  .rowName {
+    font-size: 1.5rem;
+  }
 }
